cluster/apps/monitoring/kube-prometheus-stack/app/httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
  - name: main
    namespace: networking
  hostnames:
  - "alertmanager.${CLUSTER_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-alertmanager
      port: 9093
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
  - name: main
    namespace: networking
  hostnames:
  - "prometheus.${CLUSTER_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-prometheus
      port: 9090
